// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputPassword InputPassword component must reveal password on eye click 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="formField wrapper optional"
    >
      <label
        class="formLabel label"
      >
        <span>
          Input
        </span>
        <input
          aria-describedby="inputValidationMessage"
          name="input"
          type="text"
          value=""
        />
      </label>
    </div>
    <span
      class="eye"
    >
      <button
        class="button iconPadding"
        tabindex="-1"
        type="button"
      >
        <span
          class="ssrOnly"
        >
          Toggle password visibility
        </span>
        <test-file-stub
          classname="digicon"
          height="16"
          width="16"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`InputPassword InputPassword component should render correctly 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="formField wrapper optional"
    >
      <label
        class="formLabel label"
      >
        <span>
          Input
        </span>
        <input
          aria-describedby="inputValidationMessage"
          name="input"
          type="password"
          value=""
        />
      </label>
    </div>
    <span
      class="eye"
    >
      <button
        class="button iconPadding"
        tabindex="-1"
        type="button"
      >
        <span
          class="ssrOnly"
        >
          Toggle password visibility
        </span>
        <test-file-stub
          classname="digicon"
          height="16"
          width="16"
        />
      </button>
    </span>
  </div>
</div>
`;
